Fixed Bug 61778 - Mail with very long to field overlaps the contact picture
(cherry picked from commit 9fd20a232b0ba405440148b5d2669a2eb4603fcb)

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -496,9 +496,9 @@
 
         .recipients {
             float: left;
-            max-width: 100%;
-            padding-right: 16px;
-            .ellipsis();
+            width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         .priority { font-size: 14px; }
         .flag-picker {
